# agentic-rag-6-layers

./: README.md  api_server.py  app.py  config.py  demo.html  main.py  pyproject.toml  requirements.txt
evaluation/: ragas_eval.py
indexing/: chunker.py  embedder.py  store.py
mcp/: __init__.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py
pipeline/: agent_loop.py  context_distillation.py  graph.py  hybrid_retrieval.py  input_intelligence.py  lazy_router.py  output.py  state.py
